[tool.poetry]
name = "agent-surf"
version = "0.1.0"
description = "An LLM agent that surfs the web"
authors = ["gcardoso2314 <gerard2314@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "~0.0.333"
anthropic = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
